flux/infrastructure/support/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: support
  labels:
    name: support
