flux/infrastructure/support/trudesk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trudesk
  namespace: support
  labels:
    app: trudesk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trudesk
  template:
    metadata:
      labels:
        app: trudesk
    spec:
      containers:
        - name: trudesk
          image: polonel/trudesk:1
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 256Mi
          ports:
            - containerPort: 8118
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: trudesk
  namespace: support
  labels:
    app: trudesk
spec:
  selector:
    app: trudesk
  ports:
    - name: http
      port: 8118
      targetPort: 8118
      protocol: TCP
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trudesk
  namespace: support
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`support.becklab.cloud`)
      middlewares:
        - name: sso-admin-chain
          namespace: identity
      services:
        - name: trudesk
          port: 8118
  tls:
    secretName: support-tls
